--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
     html, body, #root {
-        @apply w-full h-full;
+        @apply w-full h-full overflow-hidden;
     }
 
     :root {
